# webwombat

./: .gitignore  .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/: __init__.py
src/commands/: categories.py  projects  projects.py  templates.py
src/project_wombat/: cli.py
src/project_wombat/commands/: components.py
src/project_wombat/generators/: test_react_project_generator.py
src/project_wombat/utils/: crud_handler.py  file_operations.py
tests/: __init__.py  test_project_wombat.py
