[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project_wombat"
version = "0.1.0"
description = "Project managment and code Scaffold generator"
readme = "README.rst"
authors = [
  {name = "Reed Jones", email = "reedmjones@outlook.com"}
]
maintainers = [
  {name = "Reed Jones", email = "reedmjones@outlook.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/reedjones/project_wombat/issues"
changelog = "https://github.com/reedjones/project_wombat/blob/master/changelog.md"
homepage = "https://github.com/reedjones/project_wombat"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project_wombat"
version = "0.1.0"
description = "Project managment and code Scaffold generator"
readme = "README.rst"
authors = [
  {name = "Reed Jones", email = "reedmjones@outlook.com"}
]
maintainers = [
  {name = "Reed Jones", email = "reedmjones@outlook.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/reedjones/project_wombat/issues"
changelog = "https://github.com/reedjones/project_wombat/blob/master/changelog.md"
homepage = "https://github.com/reedjones/project_wombat"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

